# mcp-server-client-computer-use-ai-sdk

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.RAILWAY.md  README.md  certbot-renew.sh  docker-compose.yml  install.sh  mcp_config.db  nginx.conf  schema.sql  verify_mcp_references.py
.railway/: config.json
hello-world-mcp-client/: README.md  main.ts  package-lock.json  package.json  query-processing-engine.ts  start-here.ts
hello-world-mcp-client/tests/: test-mcp.js
mcp-client-cli-interface/: cli.ts  main.ts  package-lock.json  package.json  query-processing-engine.ts  setup.ts  start-here.ts
mcp-client-cli-interface/workflow-builder/: agent.ts  interface.ts  player.ts  recorder.ts  storage.ts  types.ts
mcp-client-nextjs/: .env.example  README.md  package-lock.json  package.json
mcp-server-chained-tools/: package-lock.json  package.json  send-discord-message.ts  server.ts
mcp-server-for-chained-tools-and-agents/: README.md  send-discord-message.ts  tsconfig.json
mcp-server-for-low-level-computer-use/examples/: test_example.rs  test_get_all_apps.rs  test_get_arc_all_elements_sdk_count.rs  test_get_arc_text_sdk.rs
mcp-server-for-low-level-computer-use/src/: desktop.rs
mcp-server-os-level/examples/: test_get_arc_all_elements_custom.rs  test_get_arc_interactable_elements.rs  test_get_messages_and_send_message.rs  test_get_messages_text_sdk.rs
mcp-server-os-level/src/: lib.rs  (+1 more)
rust-backend/: Cargo.toml
rust-backend/examples/: test_click_by_role.rs  test_get_arc_interactable_elements_list.rs
rust-backend/src/: lib.rs
(+17 files in other folders)
