[package]
name = "computer-use-ai-sdk"
version = "0.1.0"
edition = "2021"
description = "Desktop UI automation through accessibility APIs"
authors = ["m13v, louis030195"]
repository = ""

[dependencies]
# General dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
once_cell = "1.19"
uuid = { version = "1.3", features = ["v4"] }
chrono = "0.4"

# Server dependencies
axum = "0.6.20"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }

# Common dependencies that might be needed based on original code
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific dependencies
accessibility-sys = { git = "https://github.com/eiz/accessibility.git", branch = "master" }
accessibility = { git = "https://github.com/eiz/accessibility.git", branch = "master" }
objc = "0.2.7"
objc-foundation = "0.1.1"
core-foundation = "0.10.0"
core-graphics = { version = "0.24.0", features = ["highsierra"] }

# Add Windows dependencies if needed
[target.'cfg(target_os = "windows")'.dependencies]
# windows crate with relevant features (if used)

# Add Linux dependencies if needed
[target.'cfg(target_os = "linux")'.dependencies]
# dbus, atspi, etc. (if used)

[[bin]]
name = "server"
path = "src/bin/server.rs"
